@@ -22,29 +22,26 @@ on:
     - '**/c-cpp.yml'
 
 jobs:
-  ubuntu-focal:
-    runs-on: ubuntu-20.04
-    steps:
-    - uses: actions/checkout@v4
-    - run: sudo apt-get install -y meson
-    - run: |
-       meson _build
-       cd _build
-       ninja
-       meson test -v
-
-  ubuntu-jammy:
-    runs-on: ubuntu-22.04
+  linux:
+    strategy:
+      matrix:
+        cc: [gcc, clang]
+    runs-on: ubuntu-latest
     env:
-      CC: 'gcc-12'
+      CC: ${{ matrix.cc }}
     steps:
     - uses: actions/checkout@v4
-    - run: sudo apt-get install -y meson $CC
-    - run: |
-       meson _build
+
+    - name: Install dependencies
+      run: sudo apt update && sudo apt-get install -y meson $CC
+
+    - name: Build
+      run: |
+       meson setup _build
        cd _build
        ninja
-       meson test -v
+    - name: Test
+      run: cd _build && meson test -v
 
   macos:
     runs-on: macos-latest
@@ -52,7 +49,7 @@ jobs:
     - uses: actions/checkout@v4
     - run: brew install meson
     - run: |
-       meson _build
+       meson setup _build
        cd _build
        ninja
-       ninja test
+       meson test -v
